<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".CategoriasActivity">

    <LinearLayout
        android:layout_width="409dp"
        android:layout_height="729dp"
        android:layout_marginStart="1dp"
        android:layout_marginTop="50dp"
        android:layout_marginEnd="1dp"
        android:orientation="vertical"
        android:textAlignment="center"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/txtPedido"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/fazerPedido"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textSize="34sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/textView3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            android:layout_marginEnd="15dp"
            android:paddingTop="15dp"
            android:text="@string/descricao"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textSize="22sp"
            android:textStyle="italic" />

        <Button
            android:id="@+id/btnHamburguer"
            android:layout_width="188dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            android:layout_marginTop="45dp"
            android:backgroundTint="#00FFFFFF"
            android:text="@string/burguers"
            android:textAlignment="center"
            android:textColor="@color/black"
            app:cornerRadius="5dp"
            app:icon="@drawable/icons8_burguer_96"
            app:iconSize="54dp"
            app:iconTint="@color/black"
            app:strokeColor="@color/black"
            app:strokeWidth="2dp" />

        <Button
            android:id="@+id/btnBebida"
            android:layout_width="188dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            android:layout_marginTop="15dp"
            android:layout_marginBottom="15dp"
            android:backgroundTint="#00FFFFFF"
            android:text="@string/bebidas"
            android:textAlignment="center"
            android:textColor="@color/black"
            app:cornerRadius="5dp"
            app:icon="@drawable/icons8_milk_shake_96"
            app:iconSize="54dp"
            app:iconTint="@color/black"
            app:strokeColor="@color/black"
            app:strokeWidth="2dp" />

        <Button
            android:id="@+id/btnSobremesas"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            android:backgroundTint="#00FFFFFF"
            android:text="@string/sobremesas"
            android:textAlignment="center"
            android:textColor="@color/black"
            app:cornerRadius="5dp"
            app:icon="@drawable/icons8_sorvete_100"
            app:iconSize="54dp"
            app:iconTint="@color/black"
            app:strokeColor="@color/black"
            app:strokeWidth="2dp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginStart="15dp"
            android:layout_marginTop="205dp"
            android:layout_marginEnd="15dp"
            android:layout_marginBottom="35dp"
            android:orientation="horizontal">

            <Button
                android:id="@+id/btnVoltar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="20dp"
                android:layout_weight="1"
                android:backgroundTint="#00FFFFFF"
                android:text="@string/voltar"
                android:textColor="@color/black"
                android:textSize="24sp"
                app:cornerRadius="5dp"
                app:strokeColor="@color/black"
                app:strokeWidth="2dp" />

            <Button
                android:id="@+id/btnProx"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:backgroundTint="#00FFFFFF"
                android:text="@string/proximo"
                android:textColor="@color/black"
                android:textSize="24sp"
                app:cornerRadius="5dp"
                app:strokeColor="@color/black"
                app:strokeWidth="2dp" />
        </LinearLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

        </androidx.constraintlayout.widget.ConstraintLayout>

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>