<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:textAlignment="center"
    tools:context=".PedidoActivity">

    <LinearLayout
        android:layout_width="409dp"
        android:layout_height="729dp"
        android:layout_marginStart="1dp"
        android:layout_marginTop="50dp"
        android:layout_marginEnd="1dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/txtPergunta2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="50dp"
            android:layout_marginEnd="50dp"
            android:layout_marginBottom="200dp"
            android:text="@string/tituloPedido"
            android:textColor="@color/black"
            android:textSize="34sp"
            android:textStyle="bold" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <Button
                android:id="@+id/btnIa"
                android:layout_width="wrap_content"
                android:layout_height="160sp"
                android:layout_marginStart="25dp"
                android:layout_marginEnd="25dp"
                android:layout_weight="1"
                android:backgroundTint="#00FFFFFF"
                android:text="@string/pedidoIa"
                android:textColor="@color/black"
                android:textSize="24sp"
                app:cornerRadius="5dp"
                app:icon="@drawable/icons8_c_rebro_100"
                app:iconPadding="12dp"
                app:iconSize="54dp"
                app:iconTint="@color/black"
                app:strokeColor="@color/black"
                app:strokeWidth="2dp" />

            <Button
                android:id="@+id/btnNormal"
                android:layout_width="wrap_content"
                android:layout_height="160sp"
                android:layout_marginEnd="25dp"
                android:layout_weight="1"
                android:backgroundTint="#00FFFFFF"
                android:text="@string/pedidoNormal"
                android:textColor="@color/black"
                android:textSize="24sp"
                app:cornerRadius="5dp"
                app:icon="@drawable/icons8_direita_90"
                app:iconPadding="12dp"
                app:iconSize="54dp"
                app:iconTint="@color/black"
                app:strokeColor="@color/black"
                app:strokeWidth="2dp" />
        </LinearLayout>
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>